--- a/doc/release-notes/rl-2605.section.md
+++ b/doc/release-notes/rl-2605.section.md
@@ -140,6 +140,9 @@
 
 - Added `dell-bios-fan-control` package and service.
 
+- `openrgb` was updated to 1.0rc2, which now uses Plugin API version 4.
+  Some existing OpenRGB plugins may be incompatible or require updates.
+
 - We now use the upstream wrapper script for Gradle, supporting both the `JAVA_HOME` and `GRADLE_OPTS` environment variables.
 
 ## Nixpkgs Library {#sec-nixpkgs-release-26.05-lib}
