coreth: Remove package
coreth has been moved by upstream into `AvalancheGo`, which is also
packaged in nixpkgs.

Additionally, it has been unmaintained and the Darwin build broken since
2024.

--- a/doc/release-notes/rl-2605.section.md
+++ b/doc/release-notes/rl-2605.section.md
@@ -103,6 +103,8 @@
 
 - Ethercalc and its associated module have been removed, as the package is unmaintained and cannot be installed from source with npm now.
 
+- `coreth` has been removed, as upstream has moved it into `avalanchego`.
+
 - `nodePackages.prebuild-install` was removed because it appeared to be unmaintained upstream.
   See [upstream's recommendations for alternatives](https://github.com/prebuild/prebuild-install#note).
 
